# TeamHwagiAIAI

./: .gitignore  README.md
a_model_training/: b_train_lstm_00.py
b_inference_server/: README.md  kakao_test.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  errors.py  main.py
backend/app/internal/: __init__.py  cli_show_recent_events.py  kakao_notification.py
backend/app/models/: __init__.py  model_io_behavior.py  model_io_event.py
backend/app/routers/: __init__.py  router_behavior.py  router_event.py  router_health.py
backend/app/services/: __init__.py  service_behavior.py  service_event.py
c_web_client/: .env.example  stream_lstm_app.py
core/: README.md
core/python/: README.md  pyproject.toml
core/python/src/project_core/: __init__.py  result.py
frontend/: README.md
frontend/agent/: README.md  pyproject.toml
frontend/agent/frontend_agent/: __init__.py  client_behavior_realtime.py  main.py  server_stream.py
frontend/web/: client_behavior_realtime.py  index.html
legacy/: .env.example  README.md  a_make_dateset_00.py  a_make_dateset_01.py  c_realtime_client.py  c_realtime_inference_lstm.py  c_server.py  stream_lstm_app.py
modeling/: README.md  pyproject.toml
modeling/src/modeling/: __init__.py
modeling/src/modeling/inference/: __init__.py  inference_lstm.py
modeling/src/modeling/preprocessing/: __init__.py  dataset_anomaly.py  dataset_common.py  dataset_normal.py
modeling/src/modeling/training/: __init__.py  trainer_lstm.py
