[project]
name = "frontend-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.5",
]

[project.scripts]
run-agent-dev = "fastapi dev frontend_agent/main.py --host 0.0.0.0 --port 8001"
run-agent = "fastapi run frontend_agent/main.py --host 0.0.0.0 --port 8001"
run-realtime-client = "frontend_agent.client_behavior_realtime:main"
